--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -4,12 +4,12 @@ title: To Do List
 tags:
 ---
 
-<h1>To Do</h1>
+<h2>To Do</h2>
 
 <ul>
 	<li>better home page styling (research/break into features/implement)</li>
 	<li>better post styling</li>
-	<li>automate the new post name process (shell script to execute jekyll new blog and then format the name accordingly. Pass required name as input.)</li>
+	<li>automate the new post name process (shell script to create a new file and then format the name accordingly. Pass required name as input.)</li>
 	<li>tags list on main page</li>
 	<li><a href="https://help.disqus.com/customer/portal/articles/472138-jekyll-installation-instructions" target="_blank">Disquss integration</a></li>
 	<li>image integration</li>
@@ -17,4 +17,9 @@ tags:
 	<li>post image (auto-generate one if none)</li>
 	<li>search tool</li>
 	<li>tracking (GTM+GA)</li>
+	<li>sitemap.xml and robots.txt</li>
+	<li>create dev branch to keep master branch clean</li>
+	<li>hidden posts (hide the ones I don't want to share for whatever reason)</li>
+	<li>responsiveness</li>
+	<li>calendar view (?)</li>
 </ul>
