Adding todo item.

--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -22,4 +22,5 @@ tags:
 	<li>hidden posts (hide the ones I don't want to share for whatever reason)</li>
 	<li>responsiveness</li>
 	<li>calendar view (?)</li>
+	<li>Quick tidbids (for quick things like phone configs, useful apps [maybe character limit?])
 </ul>
