Crossing tracking and post creation automation

--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -9,18 +9,19 @@ tags:
 <ul>
 	<li>better home page styling (research/break into features/implement)</li>
 	<li>better post styling</li>
-	<li>automate the new post name process (shell script to create a new file and then format the name accordingly. Pass required name as input.)</li>
+	<li style="text-decoration: line-through;">automate the new post name process (shell script to create a new file and then format the name accordingly. Pass required name as input.)</li>
 	<li>tags list on main page</li>
 	<li><a href="https://help.disqus.com/customer/portal/articles/472138-jekyll-installation-instructions" target="_blank">Disquss integration</a></li>
 	<li>image integration</li>
 	<li>blog icon/image + favicon</li>
 	<li>post image (auto-generate one if none)</li>
 	<li>search tool</li>
-	<li>tracking (GTM+GA)</li>
+	<li style="text-decoration: line-through;">tracking (GTM+GA)</li>
 	<li>sitemap.xml and robots.txt</li>
 	<li>create dev branch to keep master branch clean</li>
-	<li>hidden posts (hide the ones I don't want to share for whatever reason)</li>
+	<li>hidden posts (use a "hidden" tag and create a second listing to show only those posts)</li>
 	<li>responsiveness</li>
 	<li>calendar view (?)</li>
-	<li>Quick tidbids (for quick things like phone configs, useful apps [maybe character limit?])
+	<li>Quick tidbits (for quick things like phone configs, useful apps [maybe character limit?])
+	<li style="text-decoration: line-through;">automate assets creation (function that receives i for images or d for downloads and the date to locate the respective blog post)</li>
 </ul>
