First implementation of MDL on the home page.

--- a/_posts/2016-03-04-and-so-it-starts.html
+++ b/_posts/2016-03-04-and-so-it-starts.html
@@ -1,7 +1,9 @@
 ---
-layout: post
+layout: default_post
 title: And so, it starts
 tags:
+summary: "Why am I starting this blog?"
+image: /assets/2016-03-04/hero.jpg
 ---
 
 <h2>Starting a blog...</h2>
