--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -1,7 +1,9 @@
 ---
-layout: post
+layout: default_post
 title: To Do List
 tags:
+summary: "Just a plain to do list, so I can write ideas down."
+image: /assets/2016-03-07/hero.jpg
 ---
 
 <h2>To Do</h2>
