Hiding posts under draft through hidden flag.

--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -22,7 +22,7 @@ image: /assets/2016-03-07/hero.jpg
 	<li style="text-decoration: line-through;">tracking (GTM+GA)</li>
 	<li>sitemap.xml and robots.txt</li>
 	<li>create dev branch to keep master branch clean</li>
-	<li>hidden posts (use a "hidden" tag and create a second listing to show only those posts)</li>
+	<li style="text-decoration: line-through;">hidden posts for draft mode (use a "hidden" tag and create a second listing to show only those posts)</li>
 	<li>responsiveness</li>
 	<li>calendar view (?)</li>
 	<li>Quick tidbits (for quick things like phone configs, useful apps [maybe character limit?])
