--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 							<p>Hey there! I'm still working on the styling here, but feel free to look around. Please let me know if you find anything broken.</p>
 					</div>
 						{% for post in site.posts %}
+						{% if post.hidden == FALSE %}
 							<div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col">
 								<div class="mdl-card__media" style="background-image: url('{{ post.image }}')">
 									<div class="texture-overlay"></div>									
@@ -27,6 +28,7 @@
 										<h2>
 											<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
 										</h2>
+										{{post.hidden}}
 										{{ post.date | date: "%b %-d, %Y" }}
 									</div>
 								</div>
@@ -35,6 +37,7 @@
 									{{ post.summary }}
 								</div>
 							</div>
+							{% endif %}
 						{% endfor %}
 
     		</div>
@@ -45,6 +48,8 @@
 
     </div>	
 		
+		
+<!-- Makes the image on the card clickable -->		
 		<script>
 		Array.prototype.forEach.call(document.querySelectorAll('.mdl-card__media'), function(el) {
 			var link = el.querySelector('a');
