Adding tsuzuku and crossing create dev branch from to do list.

--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -21,10 +21,12 @@ image: /assets/2016-03-07/hero.jpg
 	<li>search tool</li>
 	<li style="text-decoration: line-through;">tracking (GTM+GA)</li>
 	<li>sitemap.xml and robots.txt</li>
-	<li>create dev branch to keep master branch clean</li>
+	<li style="text-decoration: line-through;">create dev branch to keep master branch clean</li>
 	<li style="text-decoration: line-through;">hidden posts for draft mode (use a "hidden" tag and create a second listing to show only those posts)</li>
 	<li>responsiveness</li>
 	<li>calendar view (?)</li>
 	<li>Quick tidbits (for quick things like phone configs, useful apps [maybe character limit?])
 	<li style="text-decoration: line-through;">automate assets creation (function that receives i for images or d for downloads and the date to locate the respective blog post)</li>
+	<li>Twitter feed</li>
+	<li style="text-decoration: line-through;">Tsu-zu-ku</li>
 </ul>
