Testing disqus integration.

--- a/_posts/2016-03-04-and-so-it-starts.html
+++ b/_posts/2016-03-04-and-so-it-starts.html
@@ -4,6 +4,7 @@ title: And so, it starts
 tags:
 summary: "Why am I starting this blog?"
 image: /assets/2016-03-04/hero.jpg
+comments: true
 ---
 
 <h2>Starting a blog...</h2>
