--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -12,7 +12,7 @@ image: /assets/2016-03-07/hero.jpg
 	<li>better post styling</li>
 	<li style="text-decoration: line-through;">automate the new post name process (shell script to create a new file and then format the name accordingly. Pass required name as input.)</li>
 	<li>tags list on main page</li>
-	<li><a href="https://help.disqus.com/customer/portal/articles/472138-jekyll-installation-instructions" target="_blank">Disquss integration</a></li>
+	<li style="text-decoration: line-through;"><a href="https://help.disqus.com/customer/portal/articles/472138-jekyll-installation-instructions" target="_blank">Disquss integration</a></li>
 	<li style="text-decoration: line-through;">image integration</li>
 	<li>figcaption</li>
 	<li>blog icon/image + favicon</li>
