Robots and sitemap working.

--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -19,7 +19,8 @@ image: /assets/2016-03-07/hero.jpg
 	<li>post image (auto-generate one if none)</li>
 	<li>search tool</li>
 	<li style="text-decoration: line-through;">tracking (GTM+GA)</li>
-	<li>sitemap.xml and robots.txt</li>
+	<li style="text-decoration: line-through;">sitemap.xml and robots.txt</li>
+	<li>Automatically update sitemap.xml. Make a shell script that receives the post name as parameter, updates sitemap and runs git add on both the post and the sitemap.</li>
 	<li style="text-decoration: line-through;">create dev branch to keep master branch clean</li>
 	<li style="text-decoration: line-through;">hidden posts for draft mode (use a "hidden" tag and create a second listing to show only those posts)</li>
 	<li>responsiveness</li>
