--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -15,7 +15,7 @@ image: /assets/2016-03-07/hero.jpg
 	<li style="text-decoration: line-through;"><a href="https://help.disqus.com/customer/portal/articles/472138-jekyll-installation-instructions" target="_blank">Disquss integration</a></li>
 	<li style="text-decoration: line-through;">image integration</li>
 	<li>figcaption</li>
-	<li>blog icon/image + favicon</li>
+	<li style="text-decoration: line-through;">blog icon/image + favicon</li>
 	<li>post image (auto-generate one if none)</li>
 	<li>search tool</li>
 	<li style="text-decoration: line-through;">tracking (GTM+GA)</li>
