--- a/_posts/2016-03-07-to-do-list.html
+++ b/_posts/2016-03-07-to-do-list.html
@@ -29,4 +29,5 @@ image: /assets/2016-03-07/hero.jpg
 	<li style="text-decoration: line-through;">automate assets creation (function that receives i for images or d for downloads and the date to locate the respective blog post)</li>
 	<li>Twitter feed</li>
 	<li style="text-decoration: line-through;">Tsu-zu-ku</li>
+	<li>Change date to "n days/weeks/months/year ago"</li>
 </ul>
