--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
   <body>
 
-    {% include analytics.html %}
-
-
-    <div class="mdl-layout mdl-js-layout">
-			<canvas class="canvas-background"></canvas>
-      <main class="mdl-layout__content">	
+		<div class="mdl-layout__container has-scrolling-header">
+			<canvas class="canvas-background"></canvas>			
+			<div class="mdl-layout mdl-layout--fixed-header mdl-js-layout is-upgraded">
+		    {% include analytics.html %}
+		    {% include header.html %}
+      <main class="mdl-layout__content">
 				<div class="mdl-grid posts-grid">
 					<div class="mdl-card mdl-shadow--2dp mdl-card-alert mdl-cell mdl-cell--12-col">
 							<p>Hey there! I'm still working on the styling here, but feel free to look around. Please let me know if you find anything broken.</p>
@@ -23,7 +23,7 @@
 						{% if post.hidden == FALSE %}
 							<div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col">
 								<div class="mdl-card__media" style="background-image: url('{{ post.image }}')">
-									<div class="texture-overlay"></div>									
+									<div class="texture-overlay"></div>
 									<div class="mdl-card__media-text">
 										<h2>
 											<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
