Small fixes for css.

--- a/budgetControl.html
+++ b/budgetControl.html
@@ -24,6 +24,7 @@ body {
 	float: left;
 	box-sizing: border-box;
 	position: relative;		/*Needed to make position: absolute work */
+	overflow: hidden;
 }
 
 .spent-limit {
@@ -59,7 +60,6 @@ body {
 	position: absolute;
 	bottom: -10px;
 	left: 30px;
-	width: 100%;
 }
 
 p {
