--- a/budgetControl.html
+++ b/budgetControl.html
@@ -9,6 +9,7 @@
 body {
 	margin: 0;
 	font-family: Roboto;
+	color: #ecf0f1;
 }
 
 /*.wrapper {
@@ -19,7 +20,13 @@ body {
 .block {
 	width: 50%;
 	height: 33.333333%;
-	background-color: green;
+	background-color: #27ae60; /* For browsers that do not support gradients */
+
+/*  background: -webkit-radial-gradient(#2ecc71 30%, #27ae60 70%); /* Safari 5.1-6.0 */
+/*  background: -o-radial-gradient(#2ecc71 30%, #27ae60 70%); /* For Opera 11.6-12.0 */
+/*  background: -moz-radial-gradient(#2ecc71 30%, #27ae60 70%); /* For Firefox 3.6-15 */
+/*  background: radial-gradient(#2ecc71 30%, #27ae60 70%); /* Standard syntax */
+
 	border: solid 1px rgba(255,255,255,0.3);
 	float: left;
 	box-sizing: border-box;
@@ -28,7 +35,6 @@ body {
 }
 
 .spent-limit {
-	color: white;
 	font-size: 40px;
 	text-align: center;
 	position: absolute;
@@ -41,8 +47,7 @@ body {
 	width: 300px;
 	margin: auto;
 	text-align: center;
-	background: rgba(0,0,0,0.3);
-	color: white;
+	background: rgba(44, 62, 80,0.3);
 	border-radius: 50%;
 	height: 300px;
 	font-size: 70px;	
@@ -56,7 +61,6 @@ body {
 
 .category-name {
 	font-size: 80px;
-	color: white;
 	position: absolute;
 	bottom: -10px;
 	left: 30px;
@@ -68,6 +72,30 @@ p {
 
 i {
 	margin-right: 30px;
+}
+
+.budget-warning {
+	background-color: #E0B60E; /* For browsers that do not support gradients */
+/*  background: -webkit-radial-gradient(#f1c40f 30%, #E0B60E 70%); /* Safari 5.1-6.0 */
+/*  background: -o-radial-gradient(#f1c40f 30%, #E0B60E 70%); /* For Opera 11.6-12.0 */
+/*  background: -moz-radial-gradient(#f1c40f 30%, #E0B60E 70%); /* For Firefox 3.6-15 */
+/*  background: radial-gradient(#f1c40f 30%, #E0B60E 70%); /* Standard syntax */
+}
+
+.budget-over {
+	background-color: #c0392b; /* For browsers that do not support gradients */
+/*  background: -webkit-radial-gradient(#e74c3c 30%, #c0392b 70%); /* Safari 5.1-6.0 */
+/*  background: -o-radial-gradient(#e74c3c 30%, #c0392b 70%); /* For Opera 11.6-12.0 */
+/*  background: -moz-radial-gradient(#e74c3c 30%, #c0392b 70%); /* For Firefox 3.6-15 */
+/*  background: radial-gradient(#e74c3c 30%, #c0392b 70%); /* Standard syntax */
+}
+
+.madeby {
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(-45deg, #2c3e50, #34495e); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(-45deg, #2c3e50, #34495e); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(-45deg, #2c3e50, #34495e); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(-45deg, #2c3e50, #34495e); /* Standard syntax */	
 }
 
 
@@ -152,7 +180,7 @@ i {
 
 //Make all blocks squares
 	var bw = $(".block").width();
-	$(".block").css({"height":bw+"px"});
+//	$(".block").css({"height":bw+"px"});
 	
 //Center budget-left text and block
 	var blh = $(".budget-left").height();
@@ -166,12 +194,16 @@ i {
 
 
 //Main function. Grabs the JSON data and then insert the info in the blocks
+
 	var obj = $.getJSON("https://script.google.com/macros/s/AKfycbx_rWKO62Lm4u0HKtr1n5v8lwHwWQiFmTpPIKaS4VVTsfuZ_68/exec?action=get&categ=Eat%20Out&categ=Lunch&categ=Market&categ=Gas&categ=Others", function(data) {
 
 // Eat Out		
 		$(".eatout .budget-left p").text("$"+data.categories[0].Left);
 		$(".eatout .spent-limit span").first().text(data.categories[0].Spent.toFixed(2));
 		$(".eatout .spent-limit span").last().text(data.categories[0].Limit);
+		if (data.categories[0].Status) {
+			$(".eatout").addClass(data.categories[0].Status);
+		}
 		
 // Lunch
 		$(".lunch .budget-left p").text("$"+data.categories[1].Left);
@@ -194,20 +226,7 @@ i {
 		$(".others .spent-limit span").last().text(data.categories[4].Limit);
 		
 	});
-/*		console.log(data);
-		
-	  var items = [];
-	  $.each( data, function( key, val ) {
-	    items.push( "<li id='" + key + "'>" + val + "</li>" );
-	  });
- 
-	  $( "<ul/>", {
-	    "class": "my-new-list",
-	    html: items.join( "" )
-	  }).appendTo( "body" );
-	});		*/
 
-//	$("p").text(obj.categories[0].Limit);
 
 
 </script>
