--- a/budgetControl.html
+++ b/budgetControl.html
@@ -2,6 +2,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<script src="https://use.fontawesome.com/4c0d470bc7.js"></script>
 	<script src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>	
+	<link rel="shortcut icon" type="image/x-icon" href="/assets/global/favicon.ico">
 </head>
 
 <style>
