Bug fix to include color warning for other categories.

--- a/budgetControl.html
+++ b/budgetControl.html
@@ -210,21 +210,33 @@ i {
 		$(".lunch .budget-left p").text("$"+data.categories[1].Left);
 		$(".lunch .spent-limit span").first().text(data.categories[1].Spent.toFixed(2));
 		$(".lunch .spent-limit span").last().text(data.categories[1].Limit);
+		if (data.categories[1].Status) {
+			$(".eatout").addClass(data.categories[1].Status);
+		}		
 
 // Market
 		$(".market .budget-left p").text("$"+data.categories[2].Left);
 		$(".market .spent-limit span").first().text(data.categories[2].Spent.toFixed(2));
 		$(".market .spent-limit span").last().text(data.categories[2].Limit);
+		if (data.categories[2].Status) {
+			$(".eatout").addClass(data.categories[2].Status);
+		}		
 		
 // Gas
 		$(".gas .budget-left p").text("$"+data.categories[3].Left);
 		$(".gas .spent-limit span").first().text(data.categories[3].Spent.toFixed(2));
-		$(".gas .spent-limit span").last().text(data.categories[3].Limit);		
+		$(".gas .spent-limit span").last().text(data.categories[3].Limit);	
+		if (data.categories[3].Status) {
+			$(".eatout").addClass(data.categories[3].Status);
+		}			
 		
 // Others
 		$(".others .budget-left p").text("$"+data.categories[4].Left);
 		$(".others .spent-limit span").first().text(data.categories[4].Spent.toFixed(2));
 		$(".others .spent-limit span").last().text(data.categories[4].Limit);
+		if (data.categories[4].Status) {
+			$(".eatout").addClass(data.categories[4].Status);
+		}		
 		
 	});
 
